--- a/Austral-Equipos/Impresoras/eliminar_impre.html
+++ b/Austral-Equipos/Impresoras/eliminar_impre.html
@@ -23,7 +23,7 @@
             <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Austral</span>
           </a>
         </div>
-        <h2 class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Listado de anexos</h2>
+        <h2 class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Eliminar Impresora</h2>
         <div class="flex items-center">
             <div class="flex items-center ml-3">
               <div>
