--- a/Austral-Equipos/Equipos/partes/procesador/procesador.html
+++ b/Austral-Equipos/Equipos/partes/procesador/procesador.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css"  rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
-    <script src=""></script>
+    <script src="/js/procesador.js"></script>
     <title>Equipos</title>
 </head>
 <body>
@@ -62,9 +62,9 @@
               </div>
           </div>
         </div>
-      </nav>
+    </nav>
 
-      <aside id="logo-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-gray-800 dark:border-gray-700" aria-label="Sidebar">
+     <aside id="logo-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-gray-800 dark:border-gray-700" aria-label="Sidebar">
         <div class="h-full px-3 pb-4 overflow-y-auto bg-white dark:bg-gray-800">
            <ul class="space-y-2 font-medium">
               <li>
@@ -163,8 +163,6 @@
      </aside>
    
 
-
-
 <!--Galeria de fotos de acceso -->
 <div class="p-4 sm:ml-64">
     <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14">
@@ -197,9 +195,7 @@
             </table>
         </div>
      </div>
- </div>
-
-
+</div>
 
 </body>
 </html>
